styles/globals.css
/* ... */
.home-button{
  width: 100%;
  /* margin: 6px 18px; */
}

.home-button h2{
  text-align: center;
  /* padding: 0px 10px; */
  color: black;
}

.home-button h2:hover {
  color: red;
}
.products-container{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: 15px;
  margin-top: 20px;
  width: 100%;
}

/* Limit to 4 products per row on desktop */
@media screen and (min-width: 1024px) {
  .products-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
  }

  .products-container > * {
    flex: 0 0 calc(25% - 15px);
    max-width: calc(25% - 15px);
    min-width: 310px; /* Ensure product cards can accommodate small-images-container */
  }
}
.products-collection-container{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: 'center';
  padding-bottom: 60px;

}
.products-collection-container h2{
  text-align: center;
  text-decoration: underline wavy red;
  text-transform: uppercase;
  padding: 10px;
  font-family: "ITC Avant Garde Gothic LT Bold";

}

.product-card{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
 cursor: pointer;
  transform: scale(1, 1);
  transition: transform 0.5s ease;
  max-width: 350px;
}

.product-card:hover .product-image{
  transform: scale(1.05,1.05)
}

.product-image{
  border-radius: 10px;
  height: 250px;
  width: 250px;
  object-fit: cover;
 /* background-color: #ebebeb; */
  transform: scale(1, 1);
  transition: transform 0.5s ease;
}

.product-name{
  margin-top: 6px;
  padding: 5px;
  font-weight: 500;
  text-align: center;
  background-color: black;
  color: white;
  width: 100%;
  text-transform: uppercase;
  /* border-top-left-radius: 10px;
  border-top-right-radius: 10px; */
}
.product-price{
  font-weight: 800;
  padding: 5px;
  margin-top: 6px;
  /* background-color: red; */
  border: 2px black solid;
  color: red;
  width: 100%;
  text-align: center;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;

}

.header-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: black;
  color: white;
  position: relative;
  /* height: 200px; */
  width: 100%;
  border-radius: 10px;
}

.header-container p {
  padding-bottom: 18px
}
.header-container-internal {
  width: 100%;
  padding: 100px 40px;
}

.header-section-title {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding-top: 18px;
  padding-bottom: 18px;
}
.header-title-box{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
  padding: 20px;
  border: white 10px solid;
  border-radius: 50%;
}

.header-title-box h1 {
  font-family: "ITC Avant Garde Gothic LT Bold";

}
.title-underline {
  /* text-decoration: underline wavy red; */
}

.header-items {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-start;
  width: 100%;
  padding-left: 18px;
  padding-right: 18px;
  /* padding-bottom: 18px */
}
.header-collections {
  display: flex;
  flex-direction: row;
  width: 100%;
}
.header-collections p {
  font-family: "ITC Avant Garde Gothic LT Bold"
}

.header-collections p:hover {
  text-decoration: underline wavy red;
  cursor: pointer;
}
.header-menu-items {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  flex-wrap: wrap;
  width: 100%
}

@media only screen and (max-width: 600px) {
  .header-collections {
    flex-direction: column;
  }
  .header-menu-items {
    flex-direction: column;
  }
}

.header-about:hover {
  text-decoration: underline wavy red;
  cursor: pointer;
}

.header-about p {
  font-family: "ITC Avant Garde Gothic LT Bold";
}

.hero-banner-container{
  padding: 100px 40px;
  background-color: #dcdcdc;
  border-radius: 15px;
  position: relative;
  height: 500px;
  line-height: 0.9;
  width: 100%;

}
.hero-banner-container .beats-solo{
  font-size: 20px;
}
.hero-banner-container button{
   border-radius: 15px;
  padding: 10px 16px;
  background-color: #f02d34;
  color: white;
  border: none;
  margin-top: 40px;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
  z-index:10000 !important;
}

.hero-banner-container h3{
  font-size: 4rem;
  margin-top: 4px;
}
.hero-banner-container h1{
  color: white;
  font-size: 10em;
  margin-left: -20px;
  text-transform: uppercase;
}
.hero-banner-image{
  position: absolute;
  top: 0%;
  right:20%;
  width: 450px;
  height: 450px;
}


.desc{
position: absolute;
right: 10%;
bottom: 5%;
width: 300px;
line-height: 1.3;
display: flex;
flex-direction: column;
 color: black;

}
.desc p{
  color: #5f5f5f;
  font-weight: 100;
text-align: end;
}
.desc h5{
  margin-bottom: 12px;
  font-weight: 700;
  font-size: 16px;
  /* color: black; */
  align-self: flex-end;
}
.products-heading{
  text-align: center;
  margin: 40px 0px;
 color: black;

}
.products-heading h2{
  font-size: 40px;
  font-weight: 800;

}
.products-heading p{
  font-size: 16px;
  font-weight: 200;
}
.footer-banner-container{
  padding: 100px 40px;
  background-color: #f02d34;
  border-radius: 15px;
  position: relative;
  height: 400px;
  line-height: 1;
  color: white;
  width: 100%;
  margin-top: 120px;
}
.banner-desc{
  display: flex ;
  justify-content: space-between;
}
.banner-desc button{
  border-radius: 15px;
  padding: 10px 16px;
  background-color: white;
  color: red;
  border: none;
  margin-top: 40px;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
}
.banner-desc .left h3{
  font-weight: 900;
  font-size: 80px;
  margin-left: 25px;
}
.banner-desc .left p{
  margin:18px;
}
.footer-banner-image{
  position: absolute;
  /* top: -35%;
  left: 8%; */
  top: -25%;
  left: 25%;
}
.banner-desc .right{
  line-height: 1.4;
}
.banner-desc .right h3{
  font-weight: 800;
  font-size: 60px;
}
.banner-desc .right p{
  font-size: 18px;
}
/* ... */

